--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap");
+
+/* root */
+:root {
+  --primary-1: hsl(215, 51%, 70%);
+  --primary-2: hsl(178, 100%, 50%);
+  --main-bg: hsl(217, 54%, 11%);
+  --card-bg: hsl(216, 50%, 16%);
+  --line: hsl(215, 32%, 27%);
+  --white: hsl(0, 0%, 100%);
+}
+
 *,
 *::before,
 *::after {
@@ -6,17 +18,39 @@
   padding: 0;
 }
 
+body {
+  font-family: "Outfit", sans-serif;
+  font-size: 18px;
+  height: 100vh;
+  background-color: var(--main-bg);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: var(--white);
+}
+
+/* card */
+.card {
+  max-width: 325px;
+  margin: 30px auto;
+  background-color: var(--card-bg);
+  border-radius: 20px;
+  padding: 20px;
+}
+
+/* card image */
+.card-image img {
+  width: 100%;
+  height: 100%;
+  border-radius: 20px 20px 20px 20px;
+}
+
+/* Attribution */
 .attribution {
   font-size: 11px;
   text-align: center;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
-}
-
-body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
