--- a/CSS/style.css
+++ b/CSS/style.css
@@ -171,3 +171,10 @@ body {
 .attribution a {
   color: hsl(228, 38%, 82%);
 }
+
+/* media */
+@media (max-width: 475px) {
+  .card {
+    margin: 20px auto;
+  }
+}
